<?xml version="1.0"?>
<package format="3">
  <name>gps_tools</name>
  <version>1.0.4</version>
  <description>GPS routines for use in GPS drivers</description>

  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gps_common</url>
  <url type="repository">https://github.com/swri-robotics/gms_umd</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>gps_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>GeographicLib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
